apps/glance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: glance
spec:
  type: ClusterIP
  selector:
    app: glance
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
